# Prometheus

Modules/common/msgs/: CMakeLists.txt
Modules/common/msgs/srv/: GetOffsetpose.srv
Modules/mission/: CMakeLists.txt
Modules/mission/formation/: formation_change.cpp  formation_control.cpp  getoffsetpose_srv.cpp
Modules/mission/include/: Formation.h
Modules/planning/FilterPC/: CMakeLists.txt  package.xml
Modules/planning/FilterPC/src/: filter.cpp
Modules/swarm_control/src/: swarm_controller.cpp
Simulator/gazebo_simulator/launch_ego_planner/: ego.rviz
Simulator/gazebo_simulator/launch_formation/: prometheus_formation_control.launch  sitl_formation_5uav.launch
Simulator/gazebo_simulator/launch_planning/: sitl_astar_2dlidar.launch
Simulator/gazebo_simulator/py_nodes/: laser_to_pointcloud.py
Simulator/gazebo_simulator/sh_formation/: sitl_formation.sh
